--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,7 @@
 </head>
 <body>
 	
+	
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
@@ -41,7 +42,7 @@
 						Username
 					</span>
 					<div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
-						<input class="input100" type="text" name="username" >
+						<input class="input100" type="text" name="username" value={{request.form.username}}>
 						<span class="focus-input100"></span>
 					</div>
 					
@@ -52,7 +53,7 @@
 						<span class="btn-show-pass">
 							<i class="fa fa-eye"></i>
 						</span>
-						<input class="input100" type="password" name="pass" >
+						<input class="input100" type="password" name="password"  value={{request.form.password}}>
 						<span class="focus-input100"></span>
 					</div>
 					
@@ -64,7 +65,7 @@
 						</div>
 
 						<div>
-							<a href="#" class="txt3">
+							<a href="/forgot" class="txt3">
 								Forgot Password?
 							</a>
 						</div>
@@ -75,6 +76,9 @@
 							Login
 						</button>
 					</div>
+					{% if error %}
+        <p class="error"><strong>Error:</strong> {{ error }}
+      {% endif %}
 
 				</form>
 			</div>
