--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,7 +32,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
-				<form class="login100-form validate-form flex-sb flex-w" method="post">
+				<form class="login100-form validate-form flex-sb flex-w", method="post">
 					<span class="login100-form-title p-b-32">
 						Sign Up
 					</span>
@@ -41,7 +41,7 @@
 						Username
 					</span>
 					<div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
-						<input class="input100" type="text" name="username" >
+						<input class="input100" type="text" name="username" value={{request.form.username}} >
 						<span class="focus-input100"></span>
 					</div>
 					
@@ -52,7 +52,7 @@
 						<span class="btn-show-pass">
 							<i class="fa fa-eye"></i>
 						</span>
-						<input class="input100" type="password" name="pass" >
+						<input class="input100" type="password" name="password" value={{request.form.password}} >
 						<span class="focus-input100"></span>
 					</div>
 
@@ -63,7 +63,7 @@
 						<span class="btn-show-pass">
 							<i class="fa fa-eye"></i>
 						</span>
-						<input class="input100" type="password" name="pass" >
+						<input class="input100" type="password" name="confirmpassword" value={{request.form.confirmpassword}} >
 						<span class="focus-input100"></span>
 					</div>
 			
@@ -72,9 +72,17 @@
 						<button class="login100-form-btn" href="/login">
 							Create Account
 						</button>
-					</div>
+						
+					
+				</div>
+					{% if error %}
+        <p class="error"><strong>Error:</strong> {{ error }}
+      {% endif %}
 
 				</form>
+				<button class="login100-form-btn" action="/login" style="margin:20px 0px 0px 0px">
+							Login
+				</button>
 			</div>
 		</div>
 	</div>
@@ -97,7 +105,7 @@
 <!--===============================================================================================-->
 	<script src="/static/vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="/static/js/main.js"></script>
 
 </body>
 </html>
