--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
 					</span>
 
 					<span class="txt1 p-b-11">
-						Username
+						Email ID
 					</span>
 					<div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
 						<input class="input100" type="text" name="username" value={{request.form.username}}>
@@ -77,7 +77,7 @@
 						</button>
 					</div>
 					{% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
+        <p class="error"><strong style="font-size: 10px text-color: red">Error:</strong> {{ error }}
       {% endif %}
 
 				</form>
