--- a/templates/contact.html
+++ b/templates/contact.html
@@ -51,6 +51,12 @@
 						<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="/gallery">Gallery</a></li>
 						<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+						{% if 'username' in session %}
+                        <li class="nav-item"><a class="nav-link" href="/logout">Logout </a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="/login">LogIn </a></li>
+                        
+                        {% endif %}
 					</ul>
 				</div>
 			</div>
