--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -29,6 +29,26 @@
     <link rel="stylesheet" href="/static/css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/static/css/custom.css">
+    <link rel="icon" type="image/png" href="/static/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/animate/animate.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/select2/select2.min.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -55,6 +75,12 @@
 						<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="/gallery">Gallery</a></li>
 						<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+						{% if 'username' in session %}
+                        <li class="nav-item"><a class="nav-link" href="/logout">Logout </a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="/login">LogIn </a></li>
+                        
+                        {% endif %}
 					</ul>
 				</div>
 			</div>
@@ -88,25 +114,25 @@
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 col-xs-12">
 					<div class="contact-block">
-						<form id="contactForm" method="post" action="confirm.html">
+						<form id="contactForm" method="post">
 							<div class="row">
 								<div class="col-md-6">
 									<h3>Book a table</h3>
 									<div class="col-md-12">
 										<div class="form-group">
-											<input id="input_date" class="datepicker picker__input form-control" name="date" type="text" value="" equired data-error="Please enter Date" value={{request.form.date}}>
+											<input id="input_date" class="datepicker picker__input form-control" name="date" type="date" value="" equired data-error="Please enter Date" value={{request.form.date}}>
 											<div class="help-block with-errors"></div>
 										</div>                                 
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<input id="input_time" class="time form-control picker__input" required data-error="Please enter time" value={{request.form.time}}>
+											<input id="input_time" name="time" class="time form-control picker__input" type="time" required data-error="Please enter time" value={{request.form.time}}>
 											<div class="help-block with-errors"></div>
 										</div>                                 
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<select class="custom-select d-block form-control" id="person" required data-error="Please select Person" value={{request.form.persons}}>
+											<select class="custom-select d-block form-control" id="persons" required data-error="Please select Person" name="persons" value={{request.form.persons}}>
 											  <option disabled selected>Select Person*</option>
 											  <option value="1">1</option>
 											  <option value="2">2</option>
@@ -136,14 +162,14 @@
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<input type="text" placeholder="Your Numbar" id="phone" class="form-control" name="phone" required data-error="Please enter your Number" value={{request.form.number}}>
+											<input type="text" placeholder="Your Numbar" id="number" class="form-control" name="number" required data-error="Please enter your Number" value={{request.form.number}}>
 											<div class="help-block with-errors"></div>
 										</div> 
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="submit-button text-center">
-										<button class="btn btn-common" id="submit" type="submit" onclick="/confirm">Book Table</button>
+										<button class="btn btn-common" id="submit" type="submit">Book Table</button>
 										<div id="msgSubmit" class="h3 text-center hidden"></div> 
 										<div class="clearfix"></div> 
 									</div>
@@ -282,7 +308,7 @@
 	<a href="#" id="back-to-top" title="Back to top" style="display: none;"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
 
 	<!-- ALL JS FILES -->
-	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<!-- <script src="/static/js/jquery-3.2.1.min.js"></script> -->
 	<script src="/static/js/popper.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
@@ -291,8 +317,8 @@
 	<script src="/static/js/isotope.min.js"></script>
 	<script src="/static/js/baguetteBox.min.js"></script>
 	<script src="/static/js/picker.js"></script>
-	<script src="/static/js/picker.date.js"></script>
-	<script src="/static/js/picker.time.js"></script>
+	<script src="/static/vendor/bootstrap/js/picker.date.js"></script>
+	<script src="/static/vendor/bootstrap/js/picker.time.js"></script>
 	<script src="/static/js/legacy.js"></script>
 	<script src="/static/js/form-validator.min.js"></script>
     <script src="/static/js/contact-form-script.js"></script>
