--- a/templates/retrieve.html
+++ b/templates/retrieve.html
@@ -18,13 +18,37 @@
     <link rel="apple-touch-icon" href="/static/images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">    
 	<!-- Site CSS -->
-    <link rel="stylesheet" href="static/css/style.css">    
+    <link rel="stylesheet" href="/static/css/style.css">    
+	<!-- Pickadate CSS -->
+    <link rel="stylesheet" href="/static/css/classic.css">    
+	<link rel="stylesheet" href="/static/css/classic.date.css">    
+	<link rel="stylesheet" href="/static/css/classic.time.css">    
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="static/css/responsive.css">
+    <link rel="stylesheet" href="/static/css/responsive.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="static/css/custom.css">
+    <link rel="stylesheet" href="/static/css/custom.css">
+    <link rel="icon" type="image/png" href="/static/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/animate/animate.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/vendor/select2/select2.min.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -69,61 +93,49 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1>Gallery</h1>
+					<h1>Reservation</h1>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- End All Pages -->
 	
-	<!-- Start Gallery -->
-	<div class="gallery-box">
+	<!-- Start Reservation -->
+	<div class="reservation-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="heading-title text-center">
-						<h2>Gallery</h2>
+						<h2>Data</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
 					</div>
 				</div>
 			</div>
-			<div class="tz-gallery">
-				<div class="row">
-					<div class="col-sm-12 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-01.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-01.jpg" alt="Gallery Images">
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-02.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-02.jpg" alt="Gallery Images">
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-03.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-03.jpg" alt="Gallery Images">
-						</a>
-					</div>
-					<div class="col-sm-12 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-04.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-04.jpg" alt="Gallery Images">
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-05.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-05.jpg" alt="Gallery Images">
-						</a>
-					</div> 
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<a class="lightbox" href="/static/images/gallery-img-06.jpg">
-							<img class="img-fluid" src="/static/images/gallery-img-06.jpg" alt="Gallery Images">
-						</a>
+			<div class="row">
+				<div class="col-lg-12 col-sm-12 col-xs-12">
+					<div class="contact-block">
+						<form id="contactForm" method="post">
+							<div class="row">
+								<div class="col-md-6">
+									<h3>Booking Details</h3>
+									{%
+                                       for doc in docs: %}
+                                    <tr>
+                                       <th>{{doc.to_dict()}}</th>
+                                   </tr>
+                                   {% endfor %}
+								</div>
+							</div> 
+							{% if error %}
+        <p class="error"><strong style="font-size: 10px text-color:red">Error:</strong> {{ error }}
+      {% endif %}           
+						</form>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- End Gallery -->
+	<!-- End Reservation -->
 	
 	<!-- Start Customer Reviews -->
 	<div class="customer-reviews-box">
@@ -247,7 +259,7 @@
 	<a href="#" id="back-to-top" title="Back to top" style="display: none;"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
 
 	<!-- ALL JS FILES -->
-	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<!-- <script src="/static/js/jquery-3.2.1.min.js"></script> -->
 	<script src="/static/js/popper.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
@@ -255,8 +267,29 @@
 	<script src="/static/js/images-loded.min.js"></script>
 	<script src="/static/js/isotope.min.js"></script>
 	<script src="/static/js/baguetteBox.min.js"></script>
+	<script src="/static/js/picker.js"></script>
+	<script src="/static/vendor/bootstrap/js/picker.date.js"></script>
+	<script src="/static/vendor/bootstrap/js/picker.time.js"></script>
+	<script src="/static/js/legacy.js"></script>
 	<script src="/static/js/form-validator.min.js"></script>
     <script src="/static/js/contact-form-script.js"></script>
     <script src="/static/js/custom.js"></script>
+
+    <!--===============================================================================================-->
+	<script src="/static/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/vendor/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/vendor/bootstrap/js/popper.js"></script>
+	<script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/vendor/daterangepicker/moment.min.js"></script>
+	<script src="/static/vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+	<script src="/static/js/main.js"></script>
 </body>
 </html>
